Mon Jun 28 05:32:09 1999  Jeffrey A Law  (law@cygnus.com)

        * m68k.h (FINALIZE_PIC): Delete.
        * m68k.c (finalize_pic): Delete.

	* m68k.h (CONDITIONAL_REGISTER_USAGE): Make the PIC register fixed
	when -fpic/-fPIC.

Mon Jun 28 05:16:35 1999  Richard Henderson  <rth@cygnus.com>

	* m68k.h (PREFERRED_RELOAD_CLASS): Don't force any FP const_doubles
	to memory.

Mon Jun 28 04:07:27 1999  David Edelsohn  <edelsohn@gnu.org>

	* rs6000.c (output_toc): Always use hex values for floating-point
	constants.  Store single-precision values in upper-half of TOC
	entry in 64-bit mode.
	* rs6000.md (floatsidf2, floatunssidf2): Add !TARGET_POWERPC64
	to final constraints.
	(fix_truncdfsi2 splitter): Change pattern matching fctiwz.
	(fctiwz): Improve accuracy of RTL for pattern.

	* rs6000.c (print_operand, case 'L'): Use plus_constant_for_output.

	* expmed.c (expand_divmod): Ensure unsigned value fits in reg_note.

Fri Jun 25 06:06:37 1999  Richard Henderson  <rth@cygnus.com>

	* alpha.h (MASK_SUPPORT_ARCH, MASK_CPU_EV5, MASK_CPU_EV6): Define
	such that MASK_SUPPORT_ARCH is not negative.

Fri Jun 25 05:35:44 1999  Jeffrey A Law  (law@cygnus.com)

	* loop.c (verify_dominator): Properly handle ADDR_VEC and
	ADDR_DIFF_VEC insns that appear inside loops.

Thu Jun 24 22:54:05 1999  David Edelsohn  <edelsohn@gnu.org>
                          Jeff Law <law@cygnus.com>

	* rs6000.md (movdf_hardfloat32): Revert previous patch.
	Handle LO_SUM the same as offsettable in cases 1 and 2.
	* rs6000.c (find_addr_reg): Revert previous patch.

Thu Jun 24 22:43:12 1999  Philippe De Muyter  <phdm@macqel.be>

	* system.h (strstr): New external function declaration.
	* acconfig.h (NEED_DECLARATION_STRSTR): New define slot.
	* configure.in (GCC_NEED_DECLARATIONS): Check for strstr.
	* config.in, configure: Rebuilt.

1999-06-24  Tom Tromey  <tromey@cygnus.com>

	* gcc.c (main): Read user-specified specs files after computing
	additional startfile_prefixes.
